Fixed spacing with days of week

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ table tr td:last-of-type {
 }
 
 .row {
-  min-width: 1000px;
+  width: 1500px;
   white-space: nowrap;
   overflow:visible;
 }
@@ -41,6 +41,26 @@ table tr td:last-of-type {
   text-align: center;
   white-space: nowrap;
   /* min-width: 100px; */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 
 svg {
